# FuzzyRough

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
rust/: Cargo.toml  PORTING_PLAN.md  deny.toml  results.json
rust/.cargo/: audit.toml
rust/crates/frlearn_api/: Cargo.toml
rust/crates/frlearn_api/examples/: iris_nn.rs
rust/crates/frlearn_api/src/: lib.rs
rust/crates/frlearn_api/tests/: e2e.rs  smoke.rs
rust/crates/frlearn_core/: Cargo.toml
rust/crates/frlearn_core/src/: error.rs  lib.rs  types.rs
rust/crates/frlearn_core/tests/: core_contract.rs
rust/crates/frlearn_descriptors/: Cargo.toml
rust/crates/frlearn_descriptors/src/: lib.rs  nnd.rs
rust/crates/frlearn_descriptors/tests/: nnd.rs
rust/crates/frlearn_lab/: Cargo.toml  README.md
rust/crates/frlearn_lab/benches/: frfs_selection.rs
rust/crates/frlearn_lab/src/: adapters.rs  datasets.rs  lib.rs  main.rs  metrics.rs  report.rs  runner.rs
rust/crates/frlearn_lab/tests/: smoke.rs
rust/crates/frlearn_math/: Cargo.toml
rust/crates/frlearn_math/src/: lib.rs  t_norms.rs  transformations.rs  vector_measures.rs  weights.rs
rust/crates/frlearn_math/tests/: math_props.rs
rust/crates/frlearn_neighbor/: Cargo.toml
rust/crates/frlearn_neighbor/benches/: bruteforce_query.rs
rust/crates/frlearn_neighbor/src/: bruteforce.rs  distance.rs  lib.rs
rust/crates/frlearn_neighbor/tests/: knn.rs  python_fixtures.rs
rust/crates/frlearn_neighbours/: Cargo.toml
rust/crates/frlearn_neighbours/benches/: frnn_scoring.rs
rust/crates/frlearn_neighbours/src/: frnn.rs  lib.rs  nn.rs
rust/crates/frlearn_neighbours/tests/: frnn_shapes.rs  nn.rs  python_fixtures.rs
rust/crates/frlearn_preprocess/: Cargo.toml
rust/crates/frlearn_preprocess/src/: lib.rs  range_normaliser.rs
rust/crates/frlearn_preprocess/tests/: python_fixtures.rs  range_normaliser.rs
rust/fixtures/python_reference/: knn.json  scores.json  x_norm.json
rust/target_codex/debug/: frlearn_lab.d  libfrlearn_lab.d
rust/target_codex/debug/.fingerprint/anstream-ac5f6d6134a59aab/: lib-anstream
rust/target_codex/debug/.fingerprint/clap_builder-f58c89101fc43bfe/: lib-clap_builder
rust/target_codex/debug/.fingerprint/clap_lex-baa5df45d4159ec3/: lib-clap_lex.json
rust/target_codex/debug/.fingerprint/frlearn_api-8d78b7cd4315e767/: dep-test-integration-test-e2e  test-integration-test-e2e  test-integration-test-e2e.json
rust/target_codex/debug/.fingerprint/frlearn_api-acc6dd1af5bfc4d1/: lib-frlearn_api  lib-frlearn_api.json
rust/target_codex/debug/.fingerprint/frlearn_api-d0329d984c1c291f/: example-iris_nn.json
rust/target_codex/debug/.fingerprint/frlearn_core-19de8164dd31ae50/: dep-lib-frlearn_core
rust/target_codex/debug/.fingerprint/frlearn_core-c082fcdcb5726ef3/: test-lib-frlearn_core.json
rust/target_codex/debug/.fingerprint/frlearn_descriptors-34d584c7554a2f97/: lib-frlearn_descriptors.json
rust/target_codex/debug/.fingerprint/frlearn_lab-2c020ff3077ed488/: dep-lib-frlearn_lab
rust/target_codex/debug/.fingerprint/frlearn_lab-75f087531b43d9da/: dep-test-lib-frlearn_lab  output-test-lib-frlearn_lab
rust/target_codex/debug/.fingerprint/frlearn_math-9f4c40f15de8bc88/: dep-lib-frlearn_math
rust/target_codex/debug/.fingerprint/frlearn_math-d6930bb36e7935ab/: dep-test-lib-frlearn_math  test-lib-frlearn_math
rust/target_codex/debug/.fingerprint/frlearn_neighbor-226e03ecbd42fe7e/: test-integration-test-python_fixtures
rust/target_codex/debug/.fingerprint/frlearn_neighbor-cdbbd42dceb08353/: dep-test-lib-frlearn_neighbor
rust/target_codex/debug/.fingerprint/frlearn_neighbor-fabccba6b996f998/: test-integration-test-knn.json
rust/target_codex/debug/.fingerprint/frlearn_neighbours-a110a8c420de9979/: test-integration-test-nn
rust/target_codex/debug/.fingerprint/frlearn_preprocess-d8f2fc7bd243fb5a/: test-integration-test-python_fixtures
rust/target_codex/debug/.fingerprint/is_terminal_polyfill-65ad116a661316b0/: lib-is_terminal_polyfill.json
rust/target_codex/debug/.fingerprint/libm-40a1ebae802486b9/: lib-libm.json
rust/target_codex/debug/.fingerprint/matrixmultiply-499e2b9a7b3bba65/: build-script-build-script-build
rust/target_codex/debug/.fingerprint/matrixmultiply-da4e1b70663d2a46/: lib-matrixmultiply.json
rust/target_codex/debug/.fingerprint/ndarray-d030b281c71dfd38/: lib-ndarray.json
rust/target_codex/debug/.fingerprint/num-complex-d3d3eb71029b8d84/: lib-num_complex.json
rust/target_codex/debug/.fingerprint/num-traits-4b5eab170393aed5/: lib-num_traits.json
rust/target_codex/debug/.fingerprint/ppv-lite86-bc7e6a9f3e7ca4d4/: lib-ppv_lite86.json
rust/target_codex/debug/.fingerprint/proc-macro2-b20a946a3a5f7c90/: run-build-script-build-script-build
rust/target_codex/debug/.fingerprint/rand_distr-7d05aab0eaddec5c/: lib-rand_distr
rust/target_codex/debug/.fingerprint/serde-48166ab98eeaf37e/: run-build-script-build-script-build
rust/target_codex/debug/.fingerprint/serde_core-547eb6df78073831/: lib-serde_core.json
rust/target_codex/debug/.fingerprint/serde_json-1cd08c0b1e9cc906/: lib-serde_json
rust/target_codex/debug/.fingerprint/thiserror-7d2cae6c91fe779d/: build-script-build-script-build
rust/target_codex/debug/examples/: iris_nn.d
rust/target_codex_bench/release/.fingerprint/cfg-if-3cfe40de624c43d8/: lib-cfg_if
rust/target_codex_docs/debug/: frlearn_lab.d  libfrlearn_lab.d  libfrlearn_lab.rlib
rust/target_codex_finaltest/debug/examples/: iris_nn.d
rust/target_codex_maintain2/debug/examples/: iris_nn-0e3ef0156bb8064d.d
rust/target_codex_maintain3/debug/examples/: iris_nn.d
rust/target_codex_readme_check/debug/examples/: iris_nn-74e2d7b43414fcd3.d
rust/target_codex_readme_fix/: .rustc_info.json
rust/target_codex_readme_fix/debug/examples/: iris_nn-74e2d7b43414fcd3.d
rust/target_codex_readme_fix2/debug/examples/: iris_nn.d
rust/target_codex_readme_test2/debug/examples/: iris_nn.d
rust/target_codex_smoke/debug/: frlearn_lab.d  libfrlearn_lab.d  libfrlearn_lab.rlib
rust/target_codex_smoke/debug/examples/: iris_nn.d
rust/target_codex_ws2/debug/examples/: iris_nn.d
(+495 files in other folders)
