[package]
name = "frlearn_api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Facade crate and pipeline API for the FuzzyRough Rust workspace."
readme = "../../../README.md"
keywords = ["fuzzy", "rough-sets", "machine-learning", "api"]
categories = ["algorithms", "science"]

[features]
default = []
svm = ["frlearn_descriptors/svm"]
eif = ["frlearn_descriptors/eif"]
sae = ["frlearn_descriptors/sae"]
kdtree = []
balltree = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
frlearn_core = { path = "../frlearn_core" }
frlearn_math = { path = "../frlearn_math" }
frlearn_preprocess = { path = "../frlearn_preprocess" }
frlearn_neighbor = { path = "../frlearn_neighbor" }
frlearn_neighbours = { path = "../frlearn_neighbours" }
frlearn_descriptors = { path = "../frlearn_descriptors" }

[dev-dependencies]
approx.workspace = true
ndarray.workspace = true
rand.workspace = true






