[package]
name = "frlearn_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core traits, errors, and score utilities for the FuzzyRough Rust workspace."
readme = "../../../README.md"
keywords = ["fuzzy", "rough-sets", "machine-learning", "classification"]
categories = ["algorithms", "science"]

[dependencies]
ndarray.workspace = true
thiserror.workspace = true

[dev-dependencies]
approx.workspace = true
