[package]
name = "frlearn_lab"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
description = "Synthetic benchmark harness for the FuzzyRough Rust workspace."
readme = "README.md"
keywords = ["benchmark", "fuzzy", "rough-sets", "cli"]
categories = ["command-line-utilities", "science"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ndarray = { version = "0.16", features = ["serde"] }
approx = "0.5"

# --- Your workspace crate that re-exports the public API ---
# If your facade crate has a different name, change it here.
frlearn_api = { path = "../frlearn_api" }

[features]
# Optional backends (enable if your workspace supports them)
svm = ["frlearn_api/svm"]
eif = ["frlearn_api/eif"]
sae = ["frlearn_api/sae"]
kdtree = ["frlearn_api/kdtree"]
balltree = ["frlearn_api/balltree"]

# Default includes only pure-Rust / core features.
default = []

[[bench]]
name = "frfs_selection"
harness = false
