[package]
name = "frlearn_math"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Fuzzy/rough math primitives and safe numeric transformations."
readme = "../../../README.md"
keywords = ["fuzzy", "rough-sets", "math", "ndarray"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
ndarray.workspace = true
thiserror.workspace = true

[dev-dependencies]
approx.workspace = true
