[package]
name = "frlearn_neighbor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Neighbour search abstractions and brute-force backend for FuzzyRough."
readme = "../../../README.md"
keywords = ["knn", "neighbors", "fuzzy", "machine-learning"]
categories = ["algorithms", "science"]

[dependencies]
ndarray.workspace = true
frlearn_core = { path = "../frlearn_core" }
frlearn_math = { path = "../frlearn_math" }

[dev-dependencies]
approx.workspace = true
serde_json.workspace = true

[[bench]]
name = "bruteforce_query"
harness = false


